force-app/main/default/objects/GoogleDriveUploadMIMETypeConfigSetting__mdt/GoogleDriveUploadMIMETypeConfigSetting__mdt.object-meta.xml
<CustomObject>
    <description>This will contain the list of file extensions and MIME type for which files can be uploaded to Google Drive via lightning comp and &quot;Files&quot; related list.</description>
    <label>GoogleDriveUploadMIMETypeConfigSetting</label>
    <pluralLabel>GoogleDriveUploadMIMETypeConfigSettings</pluralLabel>
</CustomObject>