force-app/main/default/objects/GoogleDriveUploadMIMETypeConfigSetting__mdt/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audio/Video</fullName>
                <default>true</default>
                <label>Audio/Video</label>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Images</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Spreadsheet</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>Folders</fullName>
            </value>
            <value>
                <fullName>Files</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>